--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-jsdoc": "^0.1.5",
-    "gulp-jsdoc3": "^1.0.1"
+    "gulp-jsdoc3": "^1.0.1",
+    "gulp-uglify": "^2.1.2",
+    "pump": "^1.0.2"
   }
 }
